# speed-bump

./: .gitignore  01-02-2026-ftp-progress.md  01-02-2026-ftp-verification-plan.md  01-02-2026-speed-bump-plan.md  01-02-2026-speed-bump-progress.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  run_ftp_tests.sh  setup.py
.github/workflows/: ci.yml  release.yml
.nbs/: discovery-report.md  recovery-plan.md  supervisor.md
.nbs/workers/: worker-001.md
docs/: falsification-test-design.md  methodology.md  patterns.md  testing.md
planning/: 01-02-2026-ftp-progress.md  01-02-2026-ftp-verification-plan.md  01-02-2026-speed-bump-plan.md  01-02-2026-speed-bump-progress.md
src/speed_bump/: __init__.py  _config.py  _core.c  _monitoring.py  _patterns.py  _setprofile.c  native.py
tests/: conftest.py  run_c_tests.sh  run_ftp_tests.sh  test_calibration.py  test_config.py  test_delay.py  test_free_threaded.py  test_integration.py  test_monitoring.py  test_native.py  test_patterns.py  test_threading_scaling.py  tsan_test.c
